--- a/src-astro/src/pages/sponsor/[name].astro
+++ b/src-astro/src/pages/sponsor/[name].astro
@@ -27,7 +27,7 @@ const isPartner = sponsor.type === 'partenaires';
   <div class="sponsor-page">
     <div class="sponsor-container">
       <!-- Back link -->
-      <a href="/#sponsors" class="back-link">
+      <a href="/" class="back-link">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <path d="M19 12H5M12 19l-7-7 7-7"/>
         </svg>
